Change position to fixed to avoid overflowing

--- a/src/scripts/components/scenes/SnkrsVote.styl
+++ b/src/scripts/components/scenes/SnkrsVote.styl
@@ -5,7 +5,7 @@
     width: 100%
 
   .snkrs-vote-bg
-    position: absolute
+    position: fixed
     top: -2.5%
     left: -2.5%
     background-position: center center
